// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`esbuild sanity check no-transform.js 1`] = `
"var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __markAsModule = (target) => __defProp(target, \\"__esModule\\", { value: true });
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __reExport = (target, module2, copyDefault, desc) => {
  if (module2 && typeof module2 === \\"object\\" || typeof module2 === \\"function\\") {
    for (let key of __getOwnPropNames(module2))
      if (!__hasOwnProp.call(target, key) && (copyDefault || key !== \\"default\\"))
        __defProp(target, key, { get: () => module2[key], enumerable: !(desc = __getOwnPropDesc(module2, key)) || desc.enumerable });
  }
  return target;
};
var __toCommonJS = /* @__PURE__ */ ((cache) => {
  return (module2, temp) => {
    return cache && cache.get(module2) || (temp = __reExport(__markAsModule({}), module2, 1), cache && cache.set(module2, temp), temp);
  };
})(typeof WeakMap !== \\"undefined\\" ? /* @__PURE__ */ new WeakMap() : 0);
var no_transform_exports = {};
__export(no_transform_exports, {
  hello: () => hello
});
function hello(name) {
  return \`Hello \${name != null ? name : \\"World\\"}!\`;
}
module.exports = __toCommonJS(no_transform_exports);
"
`;

exports[`esbuild with lodashOptimizeImports() CJS: standard-and-fp.js 1`] = `
"var __create = Object.create;
var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __markAsModule = (target) => __defProp(target, \\"__esModule\\", { value: true });
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __reExport = (target, module2, copyDefault, desc) => {
  if (module2 && typeof module2 === \\"object\\" || typeof module2 === \\"function\\") {
    for (let key of __getOwnPropNames(module2))
      if (!__hasOwnProp.call(target, key) && (copyDefault || key !== \\"default\\"))
        __defProp(target, key, { get: () => module2[key], enumerable: !(desc = __getOwnPropDesc(module2, key)) || desc.enumerable });
  }
  return target;
};
var __toESM = (module2, isNodeMode) => {
  return __reExport(__markAsModule(__defProp(module2 != null ? __create(__getProtoOf(module2)) : {}, \\"default\\", !isNodeMode && module2 && module2.__esModule ? { get: () => module2.default, enumerable: true } : { value: module2, enumerable: true })), module2);
};
var __toCommonJS = /* @__PURE__ */ ((cache) => {
  return (module2, temp) => {
    return cache && cache.get(module2) || (temp = __reExport(__markAsModule({}), module2, 1), cache && cache.set(module2, temp), temp);
  };
})(typeof WeakMap !== \\"undefined\\" ? /* @__PURE__ */ new WeakMap() : 0);
var standard_and_fp_exports = {};
__export(standard_and_fp_exports, {
  isNonNilArray: () => isNonNilArray
});
var import_isNil = __toESM(require(\\"lodash/isNil.js\\"));
var import_negate = __toESM(require(\\"lodash/negate.js\\"));
var import_every = __toESM(require(\\"lodash/fp/every.js\\"));
const everyNonNil = (0, import_every.default)((0, import_negate.default)(import_isNil.default));
function isNonNilArray(input) {
  return Array.isArray(input) && everyNonNil(input);
}
module.exports = __toCommonJS(standard_and_fp_exports);
"
`;

exports[`esbuild with lodashOptimizeImports() ESM: standard-and-fp.js 1`] = `
"import { isNil } from \\"lodash-es\\";
import { negate } from \\"lodash-es\\";
import { every } from \\"lodash-es/fp\\";
const everyNonNil = every(negate(isNil));
function isNonNilArray(input) {
  return Array.isArray(input) && everyNonNil(input);
}
export {
  isNonNilArray
};
"
`;
